@@ -6,6 +6,7 @@ Changelog
 ---------------------
 
 - Fix task revoking permissions on close/reassign. [phgross]
+- Fix an issue with missing zip after concurrent demand callback requests. [deiferni]
 
 
 2018.5.4 (2018-12-06)
